Added call handling event Fixes #1

--- a/Skype4Sharp/Skype4Sharp/Skype4Sharp.csproj
+++ b/Skype4Sharp/Skype4Sharp/Skype4Sharp.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Enums\MessageType.cs" />
     <Compile Include="Enums\SkypeTokenType.cs" />
     <Compile Include="Enums\UserType.cs" />
+    <Compile Include="Events\CallStartedEvent.cs" />
     <Compile Include="Events\ChatMembersChangedEvent.cs" />
     <Compile Include="Events\ContactReceivedEvent.cs" />
     <Compile Include="Events\ContactRequestReceivedEvent.cs" />
