--- a/Skype4Sharp/Skype4Sharp/Skype4Sharp.csproj
+++ b/Skype4Sharp/Skype4Sharp/Skype4Sharp.csproj
@@ -62,8 +62,10 @@
     <Compile Include="Enums\UserType.cs" />
     <Compile Include="Events\CallStartedEvent.cs" />
     <Compile Include="Events\ChatMembersChangedEvent.cs" />
+    <Compile Include="Events\ChatPictureChangedEvent.cs" />
     <Compile Include="Events\ContactReceivedEvent.cs" />
     <Compile Include="Events\ContactRequestReceivedEvent.cs" />
+    <Compile Include="Events\FileReceivedEvent.cs" />
     <Compile Include="Events\MessageEditedEvent.cs" />
     <Compile Include="Events\MessageReceivedEvent.cs" />
     <Compile Include="Events\Poller.cs" />
