Added event which triggers on role change

--- a/Skype4Sharp/Skype4Sharp/Skype4Sharp.csproj
+++ b/Skype4Sharp/Skype4Sharp/Skype4Sharp.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Events\MessageReceivedEvent.cs" />
     <Compile Include="Events\Poller.cs" />
     <Compile Include="Events\TopicChangeEvent.cs" />
+    <Compile Include="Events\UserRoleChangedEvent.cs" />
     <Compile Include="Exceptions\InvalidSkypeAction.cs" />
     <Compile Include="Exceptions\InvalidSkypeParameter.cs" />
     <Compile Include="Helpers\Extensions.cs" />
